# adoboards-tui

./: .aidoc  .gitignore  Cargo.toml  LICENSE  NIX-CONFIG.md  README.md  TEST-PLAN.md  config.toml  flake.nix  module.nix  shell.nix  test-linux.sh  test-macos.sh
src/: app.rs  cache.rs  config.rs  main.rs  models.rs  services.rs  ui.rs
test-home-manager/: README.md  flake.nix
